hphp/hack/test/typecheck/vec_not_an_array.php.exp
File "vec_not_an_array.php", line 6, characters 15-18:
Invalid argument (Typing[4110])
File "vec_not_an_array.php", line 3, characters 22-26:
Expected varray_or_darray<arraykey, _>
File "vec_not_an_array.php", line 5, characters 14-24:
But got vec<string>
